# tracks

./: .gitignore  AUTHORS  CITATION.cff  CMakeLists.txt  README.md  get_ext.sh
src/cli/: maps.cpp  tracks.cpp
src/common/: types.h  version.h
src/gui/: about.cpp  about.h  conversions.cpp  conversions.h  globals.cpp  globals.h  gui.cpp  gui.h  helpers.h  main.cpp  map.cpp  map.h  recent.h  reports.cpp  reports.h  resources.cpp  resources.h  settings.cpp  settings.h  statistics.cpp  statistics.h  summary.cpp  summary.h  tableitems.h  track_browser.cpp  track_browser.h  track_infos.cpp  track_infos.h  types.h
src/gui/dialogs/: about.cpp  about.h  conversions.cpp  conversions.h  distance_calc.cpp  distances.cpp  distances.h  paces.cpp  paces.h  reports.cpp  reports.h  settings.cpp  settings.h  statistics.cpp  statistics.h  summary.cpp  summary.h  tracks.cpp  tracks.h
src/gui/docks/: map.cpp  map.h  track_browser.cpp  track_browser.h  track_infos.cpp  track_infos.h
src/lib/: calc.h  gpx.h  map.h  timepoint.h  track.h  trackdb.h
